# easycdc

./: Cargo.toml  Makefile  docker-compose.yml  easycdc.toml
docker/mysql/: my.cnf
easycdc/: Cargo.toml  easycdc.toml  example.sql  scylla_queries.sql
easycdc/docker/mysql/: my.cnf
easycdc/src/: config.rs  control_handle.rs  gtid.rs
easycdc/src/benchmark/: benchmark_outputter.rs  mod.rs
easycdc/src/cdc/: mod.rs
easycdc/src/sink/: mod.rs
easycdc/src/sink/console/: mod.rs
easycdc/src/sink/scylla/: mod.rs  scylla_table_mapper.rs
easycdc/src/test/: docker.rs  mod.rs
easycdc_mysql_tablesync/: Cargo.toml
easycdc_mysql_tablesync/src/: main.rs
easycdc_scylla_subscriber/: Cargo.toml
easycdc_scylla_subscriber/src/: lib.rs
mysql_benchmark/: Cargo.toml
mysql_benchmark/src/: main.rs
src/: config.rs  control_handle.rs  gtid.rs  main.rs  tablemap.rs
src/benchmark/: benchmark_outputter.rs  mod.rs
src/cdc/: mod.rs
src/sink/: mod.rs
src/sink/benchmark/: mod.rs
src/sink/console/: mod.rs
src/sink/void/: mod.rs
src/test/: docker.rs  mod.rs
