[package]
name = "easycdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
anyhow = "*"
fnv = "1.*"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = "*"
structopt = { version = "0.3", default-features = true }
