[package]
name = "easycdc_mysql_tablesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easycdc_scylla_subscriber = {path = "./../easycdc_scylla_subscriber" }
tokio = {version = "1.*", features = ["full"]}
anyhow = "*"
futures = "0.3.*"